# AliveCheck

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
rabbitmq-data/: .erlang.cookie
rabbitmq-data/mnesia/rabbit@c048d08785d4/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq-data/mnesia/rabbit@rabbitmq/: rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
src/: .env  db.sqlite3  docker-entrypoint.sh  manage.py
src/addresses/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/addresses/migrations/: 0001_initial.py  0002_alter_ipaddress_subnet.py  0003_pingstat_packet_loss.py
src/addresses/templatetags/: addresess_custom.py
src/alive_check/: asgi.py  settings.py  urls.py  wsgi.py
src/celery_service/: Dockerfile  db_conn.py  docker-entrypoint.sh  pyproject.toml  tasks.py
src/django_app/: Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
src/django_app/addresses/: forms.py  models.py  urls.py  utils.py  views.py
src/django_app/addresses/templates/: settings_base.html
src/django_app/addresses/templates/addresses/: address_details.html  create_address.html  group_list_view.html  ip_addr_list_view.html  ipaddress_confirm_delete.html  ipaddress_form.html  label_list_view.html  vlan_list_view.html
src/django_app/addresses/templatetags/: addresess_custom.py
src/django_app/addresses/tests/: conftest.py
src/django_app/alive_check/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/django_app/main/: urls.py
src/django_app/main/templates/: base.html
src/django_app/users/: forms.py  urls.py  views.py
src/django_app/users/templates/users/: register.html
src/main/: views.py
src/pinging_service/: Dockerfile  db_conn.py  docker-entrypoint.sh  ip_ping.py  mq_receiver.py  pyproject.toml  utils.py
src/users/: urls.py
(+26 files in other folders)
