[tool.poetry]
name = "alive-check"
version = "0.1.0"
description = ""
authors = ["Jakub Jadczak <jakubjadczak02@aoutlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-bootstrap-icons = "^0.8.7"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
